added user registration and corrected some typos

--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -26,5 +26,8 @@
       </td>
     </tr>
   </table>
+  <p>
+    <a href="{{ url_for('auth_register') }}">Are you a new user? Register here!</a>
+  </p>
 </form>
 {% endblock %}
