--- a/application/templates/questions/list.html
+++ b/application/templates/questions/list.html
@@ -24,6 +24,9 @@
           <input type="submit" value="Delete"/>
         </form>
       </td>
+      <td>
+        <a href="{{ url_for('questions_modify', question_id=question.id) }}">Modify</a>
+      </td>
     </tr>
     {% endfor %}
   </table>
