--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -21,6 +21,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('questions_form') }} ">Add a question</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('questions_play') }} ">Play</a>
+            </li>
           </ul>
           <div class="form-inline mt-2 mt-md-0">
             {% if current_user.is_authenticated %}
