--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -24,6 +24,9 @@
             <li class="nav-item">
               <a class="nav-link" href="{{ url_for('questions_play') }} ">Play</a>
             </li>
+            <li>
+              <a class="nav-link" href="{{ url_for('statistics_show') }} ">See your statistics</a>
+            </li>
           </ul>
           <div class="form-inline mt-2 mt-md-0">
             {% if current_user.is_authenticated %}
