--- a/application/templates/statistics/statistics.html
+++ b/application/templates/statistics/statistics.html
@@ -3,14 +3,24 @@
 {% block body %}
   <table>
     <tr>
+	  <th>Category</th>
       <th>Number of answers</th>
       <th>Number of correct answers</th>
       <th>Percentage of correct answers</th>
     </tr>
     <tr>
+      <td><b>All</b></td>
       <td>{{ allAnswers }}</td>
       <td>{{ correctAnswers }}</td>
       <td>{{ percentageOfCorrectAnswers }}</td>
     </tr>
+    {% for category in answersByCategories %}
+    <tr>
+	  <td><b>{{ category.category }}</b></td>
+      <td>{{ category.answers }}</td>
+      <td>{{ category.correct }}</td>
+      <td>{{ category.percentage }}</td>
+    </tr>
+    {% endfor %}
   </table>
 {% endblock %}
