--- a/application/templates/questions/modify.html
+++ b/application/templates/questions/modify.html
@@ -36,7 +36,7 @@
       </td>
       <td>
         <ul>
-          {% for error in form.name.errors %}
+          {% for error in q_form.name.errors %}
           <li>{{ error }}</li>
           {% endfor %}
         </ul>
