--- a/application/templates/games/result.html
+++ b/application/templates/games/result.html
@@ -14,5 +14,5 @@
   <br/><br/>
   {{ result }}
   <br/><br/>
-  <a href="{{ url_for('questions_play') }}">Play again!</a>
+  <a href="{{ url_for('games_play') }}">Play again!</a>
 {% endblock %}
