--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="{{ url_for('questions_play') }} ">Play</a>
+              <a class="nav-link" href="{{ url_for('games_play') }} ">Play</a>
             </li>
 			{% if current_user.is_authenticated %}
             <li class="nav-item">
