--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -46,6 +46,11 @@
               <a class="nav-link" href="{{ url_for('auth_control') }} ">Control users</a>
             </li>
             {% endif %}
+            {% if current_user.is_authenticated %}
+            <li>
+              <a class="nav-link" href="{{ url_for('auth_settings') }} ">Account settings</a>
+            </li>
+            {% endif %}
           </ul>
           <div class="form-inline mt-2 mt-md-0">
             {% if current_user.is_authenticated %}
