--- a/application/templates/auth/delete.html
+++ b/application/templates/auth/delete.html
@@ -22,7 +22,7 @@
   <table>
     <tr>
       <td colspan="2">
-        <input type="submit" value="Cofirm"/>
+        <input type="submit" value="Confirm"/>
       </td>
     </tr>
   </table>
